# arduino-cmake

./: .gitignore  CMakeLists.txt  README  README.markdown  README.md  README.rst  README.ru.md  README.russian.txt  README.txt  configure  configure.bat
Blink2/: Blink2.ino
cmake/: ArduinoDetection.cmake  ArduinoToolchain.cmake  CheckExternalProjectDependency.cmake  EmptyExternalProject.cmake  SuperBuild.cmake  Teensy2Toolchain.cmake  TeensyToolchain.cmake
cmake/Platform/: Arduino.cmake  size_script.py
cmake/SuperBuild/: 30-binutils-2.20.1-avr-size.patch  CMakeLists.txt  CheckExternalProjectDependency.cmake  External_ARDUINO.cmake  External_ARDUINO_SDK.cmake  External_AVRDUDE.cmake  External_AVR_BINUTILS.cmake  External_AVR_GCC.cmake  External_AVR_LIBC.cmake  Versions.cmake  arduino_build_step.cmake.in  arduino_configure_step.cmake.in  avr_libc_build_step.cmake.in  avr_libc_configure_step.cmake.in  avr_libc_install_step.cmake.in  binutils_patch_step.cmake.in
cmake/modules/: ArduinoToolchain.cmake  FindArduino.cmake
cmake/modules/Platform/: Arduino.cmake  ArduinoPaths.cmake
cmake/toolchains/: Arduino.cmake
example/: CMakeLists.txt  blink.cpp  blink_lib.cpp  blink_lib.h  serial.cpp  wire_master_reader.cpp
example/Blink/: Blink.ino  config.h
example_ap/: CMakeLists.txt  aes.c  wifi_ap.cpp
example_esp32/: CMakeLists.txt  example_esp32.cpp
src/: CMakeLists.txt  wire_master_reader.cpp
test/ArduCopter/: leds.pde
test/Blink/: Blink.ino
test/Blink2/: Blink2.ino  config.h
